<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="60px"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/equationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="500dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <LinearLayout
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/row1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn1"
            android:onClick="findBtnClick"/>

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn2"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn3"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btnPlus"
            android:onClick="findBtnClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/row2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/row1">
        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn4"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn5"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn6"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btnMinus"
            android:onClick="findBtnClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/row3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/row2">
        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn7"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn8"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn9"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btnDivide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btnDivide"
            android:onClick="findBtnClick"/>
    </LinearLayout>
    <LinearLayout
        android:layout_centerHorizontal="true"
        android:id="@+id/row4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/row3">
        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btnClear"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btn0"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btnDot"
            android:onClick="findBtnClick"/>
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="75dp"
            android:height="75dp"
            android:text="@string/btnMultiply"
            android:onClick="findBtnClick"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/row4"
        android:layout_alignRight="@id/row4"
        android:layout_alignLeft="@id/row4">
        <Button
            android:id="@+id/btnEquals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnEquals"
            android:onClick="findBtnClick"/>

    </LinearLayout>





</RelativeLayout>